# RaysGame

./: CMakeLists.txt  main.cpp
include/: Entities.h  Map.h  utils.h
src/: Entities.cpp  Map.cpp
